--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,34 @@
 CHANGELOG
 =========
 
+Версия 2.0.1 (2025-10-22)
+=========================
+
+## ✨ ИЗМЕНЕНИЯ И НОВОЕ
+
+- 📱 Веб‑интерфейс: улучшена мобильная адаптация (кнопки, шрифты, отступы, верстка)
+- 🧭 Учет `prefers-reduced-motion` для снижения анимаций при необходимости
+- 🔌 Добавлен публичный REST эндпоинт `POST /execute` для программного доступа
+  - ⚠️ Ограничение безопасности: принимаются только запросы от `curl` (User-Agent)
+  - 📖 Подробности и примеры: см. `API_GUIDE.md`
+
+## 🐛 ИСПРАВЛЕНИЯ И УЛУЧШЕНИЯ
+
+- 🔧 Рефакторинг HTTP‑сервера: вынесен в пакет `serve/*` для лучшей поддерживаемости
+- 🗑️ Удалены устаревшие файлы: `cmd/serve.go`, `_main.go`
+- 🛠️ Скрипты релиза: небольшие правки в `shell-code/pre-release.sh` и `shell-code/release.py`
+
+## 📚 ДОКУМЕНТАЦИЯ
+
+- ➕ Добавлен `API_GUIDE.md` (описание `/execute`, примеры `curl`/Python)
+- 📝 Обновлены `README.md` и `USAGE_GUIDE.md` (актуализация про мобильную версию и API)
+- 🔗 В `API_CONTRACT.md` добавлена ссылка на `API_GUIDE.md` (HTTP API веб‑сервера)
+
+## ♻️ СОВМЕСТИМОСТЬ
+
+- ✅ Обратная совместимость сохранена; CLI и провайдеры (proxy/ollama) без изменений
+- 🚫 Миграция не требуется
+
 Версия 2.0.0 (2025-01-19)
 =========================
 
