--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,36 @@
 CHANGELOG
 =========
 
+Версия 2.0.6 (2025-10-28)
+=========================
+
+## ✨ НОВОЕ И ИЗМЕНЕНО
+
+- 🌐 Поддержка BasePath для всех веб‑роутов и шаблонов
+  - Новый параметр: `LCG_BASE_URL` (пример: `/lcg`) — префикс для всех страниц и API
+  - Обновлены редиректы и middleware с учетом BasePath
+- 🧭 Кастомная страница 404 (красная тема), показывается для любого неизвестного пути под BasePath
+- 📱 Улучшена мобильная верстка результатов — стиль карточек как в истории
+- 🗂️ Человекочитаемые заголовки результатов: преобразование имени файла в «заголовок — дата время»
+- 🗑️ Иконки удаления: единый бледно‑красный крест ✖ в результатах и истории
+
+## 🐛 ИСПРАВЛЕНИЯ
+
+- 🛡️ Исправлен просмотр/удаление файла при включенном BasePath (правильный разбор URL)
+- 🧰 На старте сервера гарантируется создание `ResultFolder` и пустого `ResultHistory` (без 500)
+- 🚧 Главная страница обрабатывается только по точному пути BasePath, а не по произвольным под‑путям
+
+## ⚙️ КОНФИГУРАЦИЯ
+
+- 🔍 Debug режим теперь включается и флагом `--debug`, и переменной `LCG_DEBUG=1|true`
+- 🍪 Уточнена работа с `CookiePath`/`BasePath` в middleware
+
+## 📚 ДОКУМЕНТАЦИЯ
+
+- Обновлены `README.md`, `USAGE_GUIDE.md`, `API_GUIDE.md`, `REVERSE_PROXY_GUIDE.md` — добавлены примеры с BasePath и примечания к 404
+
+---
+
 Версия 2.0.1 (2025-10-22)
 =========================
 
